2006-03-07  Eric Blake  <ebb9@byu.net>

	* libc/stdio/freopen.c (_freopen_r) [HAVE_FCNTL]: For NULL
	filename, allow read-only or write-only FILE atop O_RDWR file
	descriptor.
	* libc/stdio64/freopen64.c (_freopen64_r) [HAVE_FCNTL]: Likewise.

2006-03-07  Jeff Johnston  <jjohnstn@redhat.com>

	* libm/common/sf_isinf.c[_DOUBLE_IS_32BITS]: Undef isinf.
	* libm/common/sf_isnan.c[_DOUBLE_IS_32BITS]: Undef isnan.

2006-03-02  Jeff Johnston  <jjohnstn@redhat.com>

	* libm/math/math.tex: Fix reference to sisnan.def which
	is now in common subdirectory.
	* libm/mathfp/mathfp.tex: Ditto.

2006-02-27  Jeff Johnston  <jjohnstn@redhat.com>

	* Makefile.am (MATHOBJS_IN_LIBC): Add s_isinfd, sf_isinff, 
	s_isnand, and sf_isnanf object files.
	* Makefile.in: Regenerated.
	* libc/include/ieeefp.h: Undef isnan and isinf to avoid
	conflict if <math.h> has previously been included.
	* libc/include/math.h
	* libc/include/math.h: Make isnan and isinf macros to
	conform to C99.
	(__isinfd, __isinff, __isnand, __isnanf): New functions.
	* libm/common/Makefile.am: Add new s_isinfd, s_isnand, sf_isinff,
	and sf_isnanf files.  Also support s_isnan, sf_isnan, s_isinf, and
	sf_isinf files which have been moved from math/mathfp directories. 
	* libm/common/Makefile.in: Regenerated.
	* libm/common/s_isinfd.c: New file.
	* libm/common/s_isnand.c: Ditto.
	* libm/common/sf_isinff.c: Ditto.
	* libm/common/sf_isnanf.c: Ditto.
	* libm/common/s_isinf.c: Moved from libm/math directory.
	* libm/common/s_isnan.c: Ditto.
	* libm/common/sf_isinf.c: Ditto.
	* libm/common/sf_isnan.c: Ditto.
	* libm/math/Makefile.am: Remove isinf and isnan family functions
	which have been moved into common directory.
	* libm/mathfp/Makefile.am: Ditto.
	* libm/math/Makefile.in: Regenerated.
	* libm/mathfp/Makefile.in: Ditto.
	* libm/math/s_isinf.c: Removed.
	* libm/math/s_isnan.c: Ditto.
	* libm/math/sf_isinf.c: Ditto.
	* libm/math/sf_isnan.c: Ditto.
	* libm/mathfp/s_isinf.c: Ditto.
	* libm/mathfp/s_isnan.c: Ditto.