@@ -58,9 +58,11 @@ _DEFUN(__swsetup, (fp),
 
   /*
    * Make a buffer if necessary, then set _w.
+   * A string I/O file should not explicitly allocate a buffer
+   * unless asprintf is being used.
    */
-  /* NOT NEEDED FOR CYGNUS SPRINTF ONLY jpg */
-  if (fp->_bf._base == NULL)
+  if (fp->_bf._base == NULL 
+        && (!(fp->_flags & __SSTR) || (fp->_flags & __SMBF)))
     __smakebuf (fp);
 
   if (fp->_flags & __SLBF)
